--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.16.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2",
-    "sequelize": "^5.18.1"
+    "sequelize": "^5.18.1",
+    "sqlite3": "^4.1.0"
   }
 }
